# internal/vendors/serializers.go
@@ -1,4 +1,4 @@
-package vendor
+package vendors
 
 import (
 	"errors"
